--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ python:
 before_install:
   - sudo apt-get update
   - sudo apt-get install -y portaudio19-dev libsndfile1
+  - pip install coveralls
+  - pip install pep8
 
 install:
   - pip install .
-  - pip install coveralls
 
 script:
-  - python setup.py test
-  - coverage run -m doctest gensound/sound.py gensound/effect.py
+  - coverage run setup.py test
 
 after_success:
   - coveralls
