--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "doc/_build/html"]
 	path = doc/_build/html
-	url = git@github.com:macrat/PyGenSound.git
+	url = https://github.com/macrat/PyGenSound.git
 	branch = gh-pages
